--- a/index.html
+++ b/index.html
@@ -24,7 +24,7 @@
       -webkit-background-clip: text;
       background-clip: text;
       color: transparent;
-      animation: animate-gradient 1s linear alternate infinite;
+      animation: animate-gradient 1s linear infinite alternate;
     }
 
     @keyframes animate-gradient {
