--- a/index.html
+++ b/index.html
@@ -24,15 +24,15 @@
       -webkit-background-clip: text;
       background-clip: text;
       color: transparent;
-      animation: animate-gradient 1s linear infinite alternate;
+      animation: moveBackgroundByX 1s linear infinite alternate;
     }
 
-    @keyframes animate-gradient {
-      0% {
+    @keyframes moveBackgroundByX {
+      from {
         background-position-x: 0;
       }
 
-      100% {
+      to {
         background-position-x: 100%;
       }
     }
